--- a/index.html
+++ b/index.html
@@ -4,9 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../sass/main.css">
     <title>Calculator - ts</title>
 </head>
 <body>
-    
+    <div class="center-box">
+    <div class="all-box">
+        <div class="input-box"></div>
+        <div class="button-box">
+            <div class="two-wide">
+            </div>
+            <div class="four-wide">
+                <div class="button">+</div>
+                <div class="button">3</div>
+                <div class="button">2</div>
+                <div class="button">1</div>
+            </div>
+        </div>
+    </div>
+</div>
 </body>
 </html>
