--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,42 +9,44 @@
     <script src="./src/index.js" defer></script>
     <title>Calculator - ts</title>
 </head>
+
 <body>
     <div class="center-box">
-    <div class="all-box">
-        <input type="text" class="input-box" />
-        
-        <div class="button-box">
-            <div class="two-wide">
-                <div class="button green">CE</div>
-                <div class="button green"><img src="./images/backspace.png"></div>
-                <div class="button green">x</div>
-            </div>
+        <div class="all-box">
+            <input type="text" class="input-box">
 
-            <div class="four-wide">
-                
-                <div class="button orange">7</div>
-                <div class="button orange">8</div>
-                <div class="button orange">9</div>
-                <div class="button green"><img src="./images/divide.png"></div>
+            <div class="button-box">
+                <div class="two-wide">
+                    <div class="button green">CE</div>
+                    <div class="button green"><img src="./images/backspace.png"></div>
+                    <div class="button green">x</div>
+                </div>
 
-                <div class="button orange">4</div>
-                <div class="button orange">5</div>
-                <div class="button orange">6</div>
-                <div class="button green">-</div>
+                <div class="four-wide">
 
-                <div class="button orange">1</div>
-                <div class="button orange">2</div>
-                <div class="button orange">3</div>
-                <div class="button green">+</div>
+                    <div class="button orange">7</div>
+                    <div class="button orange">8</div>
+                    <div class="button orange">9</div>
+                    <div class="button green"><img src="./images/divide.png"></div>
 
-                <div class="button orange">+/-</div>
-                <div class="button orange">0</div>
-                <div class="button orange">,</div>
-                <div class="button green">=</div>
+                    <div class="button orange">4</div>
+                    <div class="button orange">5</div>
+                    <div class="button orange">6</div>
+                    <div class="button green">-</div>
+
+                    <div class="button orange">1</div>
+                    <div class="button orange">2</div>
+                    <div class="button orange">3</div>
+                    <div class="button green">+</div>
+
+                    <div class="button orange">+/-</div>
+                    <div class="button orange">0</div>
+                    <div class="button orange">,</div>
+                    <div class="button green">=</div>
+                </div>
             </div>
         </div>
     </div>
-</div>
 </body>
+
 </html>
